# Nexus_

./: .gitignore  LICENSE
backend/: .gitignore  pyproject.toml
backend/src/: config.py  main.py
backend/src/graph/: graph.py  state.py
backend/src/graph/nodes/: error_handler.py  personality_quiz.py  router_node.py  skill_assessment.py
backend/src/models/: quiz.py  roadmap.py
backend/src/routes/: quiz.py  roadmap.py  user.py
backend/src/services/: model_router.py  supabase_client.py
backend/tests/unit/: test_error_handler.py  test_personality_quiz_node.py  test_roadmap_routes.py  test_router_node.py  test_skill_assessment_node.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: page.tsx
frontend/app/(dashboard)/: page.tsx
frontend/app/(dashboard)/assessment/: assessment.module.css  page.tsx
frontend/app/(dashboard)/completion/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/leaderboard/: page.tsx
frontend/app/(dashboard)/quiz/: page.tsx
frontend/app/(dashboard)/skill/: page.tsx  skill.module.css
frontend/components/features/: CompletionOverlay.tsx  GateTest.tsx  RoadmapRegenerate.css  RoadmapRegenerate.tsx  RoadmapStream.tsx  SubLevelModal.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ProgressBar.tsx  QuizOption.tsx
frontend/design/: tokens.ts
frontend/frontend/lib/: api.ts
frontend/lib/: api.ts  authGate.tsx  supabase.ts
frontend/lib/hooks/: useAssessmentStream.ts  useRoadmapStream.ts
(+3 files in other folders)
