[project]
name = "nexus-backend"
version = "0.1.0"
description = "Nexus AI-powered adaptive skill development platform — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0,<0.3",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "supabase>=2.6.0",
    "redis>=5.0.0",
    "resend>=2.0.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
